css/style.css
/* ... */
svg > #BiltmoreCourts + foreignObject {
    x:460;
    y:190;
}
svg > #\32 211 + foreignObject {
   x:230;
   y:540;
}
svg > #EsplanadePlace + foreignObject {
    x:450;
    y:630;
}
svg > #Optima + foreignObject {
    x:270;
    y:630;
}
svg > #VillageOnTheLakes + foreignObject {
    x:470;
    y:540;
}
svg > #BiltmoreGates + foreignObject {
    x:190;
    y:70;
}
svg > #BiltmoreGreens + foreignObject {
    x:420;
    y:130;
}
svg > #Meridian + foreignObject {
    x:490;
    y:630;
}
svg > #BiltmoreTerrace + foreignObject {
    x:380;
    y:700;
}
svg > #BiltmoreCircleEstates + foreignObject {
    x:380;
    y:170;
}
svg > #Taliverde + foreignObject {
    x:280;
    y:450;
}
svg > #ColonyBiltmoreGreens + foreignObject {
    x:340;
    y:510;
}
svg > #BiltmoreCourtsIi + foreignObject {
    x:450;
    y:180;
}
svg > #HeightsOfTheBiltmore + foreignObject {
    x:110;
    y:370;
}
svg > #BiltmoreHillsideVillas + foreignObject {
    x:360;
    y:0;
}
svg > #TheCloisters + foreignObject {
    x:30;
    y:290;
}
svg > #BiltmoreShores + foreignObject {
    x:370;
    y:480;
}
svg > #BiltmoreMountainEstates + foreignObject {
    x:630;
    y:200;
}
svg > #LincolnHills + foreignObject {
    x:1010;
    y:170;
}
svg > #AltaVistaPark + foreignObject {
    x:590;
    y:180;
}
svg > #BiltmoreHotelVillas + foreignObject {
    x:640px;
    y:190px;
}
@media (max-width:1024.98px){
    .aside-panel {
        display: none;
    }
    main {
        height: 1005px;
        width: 1300px;
    }
    .popup {
        /*max-width: 90vw;*/
        height: auto;
        /*min-height: 320px;*/
        position: fixed;
        /*width: 100%;*/
        width: 90vw;
    }
    .popup.arrow:before, .popup.hide-arrow:before,
    .popup .comm-info:empty,
    .popup .comm-info:not(:empty) ~ div,
    .popup .comm-info .community-links {
        display: none!important;
    }
    .popup .comm-info {
        overflow: auto;
        height: 100vh;
    }
    .popup .comm-info > .container {
        padding: 15px;
    }
    .popup .caption {
        display: block;
        text-align: center;
    }
    .popup .caption .caption-title {
        font-size: 1rem;
    }
    .popup .caption .caption-text, .popup .caption .buttons,
    #searchCommunitiesFilter {
        display: block;
    }
    svg {
        position:absolute;
        left:0;
        top:0;
    }
    svg #FairwayLodge + foreignObject {
        x:400;
        y:250;
    }
    svg #BiltmoreSquare + foreignObject {
        y:100;
    }
    svg #Camelback + foreignObject {
        x:370;
        y:460;
    }
    svg > #\32 211 + foreignObject {
       x:320;
       y:430;
   }
    svg > #Optima + foreignObject {
        x:370;
        y:520;
    }
    svg > #EsplanadePlace + foreignObject {
        x:530;
        y:510;
    }
    svg > #VillageOnTheLakes + foreignObject {
        x:650;
        y:480;
    }
    svg > #BiltmoreGreens + foreignObject {
        x:600;
        y:40;
    }
    svg > #AltaVistaPark + foreignObject {
        x:770;
        y:230;
    }
    svg > BiltmoreHillsideVillas + foreignObject {
        x:550;
        y:40;
    }
    svg > #LincolnHills + foreignObject {
        x:1160;
        y:170;
    }
    svg > #Taliverde + foreignObject {
        x:290;
        y:490;
    }
    svg > #BiltmoreGates + foreignObject {
        x:350;
        y:0;
    }
    /*svg > rect:target + foreignObject {*/
    /*  x:0;*/
    /*  y:0;*/
    /*}*/
    /*svg > rect:target + foreignObject .popup {*/
    /*  top: 20px;*/
    /*  bottom: 20px;*/
    /*  left: 20px;*/
    /*  right: 20px;*/
    /*position: fixed;*/
    /*top: 50%;*/
    /*left: 50%;*/
    /*transform: translate(-50%,-50%)!important;*/
    /*}*/
    /*.popup.arrow:before {*/
    /*  display:none;*/
    /*}*/
}
@media (min-width: 1025px) and (max-width: 1440px) {
    :root {
        --aside-panel-width: 36vw;
    }
    .aside-panel .page-section .community-links li {
        font-size:.75rem;
    }
}
/* Slideshow */
.slideshow-container {
    /*max-width: 100%;*/
    position: relative;
    margin: auto;
    width: 100%;
}

/* Hide the images by default */
.slideshow-container .mySlides {
    display: none;
}

/* Next & previous buttons */
.slideshow-container .prev, .slideshow-container .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

/* Position the "next button" to the right */
.slideshow-container .next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.slideshow-container .prev, .slideshow-container .next {
    background-color: rgba(0,0,0,0.3);
}
.slideshow-container .prev:hover, .slideshow-container .next:hover {
    background-color: rgba(0,0,0,0.8);
    text-decoration: none;
}

.slideshow-container .active {
    background-color: #717171;
}

/* Fading animation */
.slideshow-container .fading {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fading {
    from {opacity: .4}
    to {opacity: 1}
}

